# django-recipe-api

./: .gitignore  Makefile  README.md  manage.py  pylava.ini  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: pipeline.yml
recipe_factory/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: conftest.py  models.py  serializers.py  services.py  urls.py  views.py
recipes/tests/: test_recipe_views.py
