[tool.poetry]
name = "recipe_factory"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
pylava = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
profile = "black"
