[tool.poetry]
name = "recipe_factory"
version = "0.1.0"
description = ""
authors = ["Marcelo Leivas <marcelo.lleivas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-rest-framework = "^0.1.0"
requests = "^2.25.1"
python-decouple = "^3.4"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
django-coverage-plugin = "^2.0.0"
flake8 = "^3.9.2"
httpretty = "^1.1.4"
pytest-cov = "^2.12.1"
pytest-django = "^4.4.0"
pytest-socket = "^0.4.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
